# PFE

./: .gitignore  .gitmodules  ERRORES_ENCONTRADOS.md  PFE_solenoide.kicad_pcb  PFE_solenoide.kicad_prl  PFE_solenoide.kicad_sch  README.md  Robot_Asm.dft  fp-info-cache
3D/: 002_mainarm.par  003 VArm.par  004_link 135.par  007_trialink.par  Base_with_motors.asm  RobotComplete.cfg  gear1.par  iman.par  sensor_iman.asm  (+4 more)
ROS/orchestrator-project/src/robot_control/: CMakeLists.txt  package.xml  setup.py
ROS/orchestrator-project/src/robot_control/install/: local_setup.sh  setup.sh
ROS/orchestrator-project/src/robot_control/install/robot_control/lib/robot_control/: listener  talker
ROS/orchestrator-project/src/robot_control/install/robot_control/share/robot_control/: package.sh
ROS/orchestrator-project/src/robot_control/log/: latest_build
ROS/orchestrator-project/src/robot_control/msg/: Trama.msg
ROS/orchestrator-project/src/robot_control/robot_control/: fkine.py  image_manager.py  limits_validator.py  main.py  main_with_ui.py  motor.py  path_planner.py  publisher.py  robot.py  robot_ui_node.py  traj_utils.py  trajectory_reader.py  user_interface.py
ROS/orchestrator-project/src/robot_control/robot_control/utils/: Bspline.py  gen_traj.py  inverse_kinematics.py  robot_kinematics.py  trajectory_planner.py  verify_point_inside_ws.py
ROS/orchestrator-project/src/robot_control/test/: VISION_INTEGRATION.md  communication.py  lspb.py  mock_vision_server.py  socket_client.py  socket_server.py  subscriber.py  testCommunication.py  testSplit.py  test_vision_client.py
(+580 files in other folders)
